--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/parentViewHolder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:layout_margin="10dp"
-    android:id="@+id/parentViewHolder">
+    android:orientation="vertical">
+
     <TextView
         android:id="@+id/name"
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hello"/>
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="Hello" />
 
 </LinearLayout>
