add custom toolbar

--- a/app/src/main/res/layout/activity_anko.xml
+++ b/app/src/main/res/layout/activity_anko.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
+        layout="@layout/toolbar_center" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
